--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -5,7 +5,7 @@ main {
     background-attachment: fixed;
     background-blend-mode: multiply;
     background-image: url('../images/juan-di-nella-966-unsplash.jpg');
-    background-position: center center;
+    background-position: bottom left;
     background-repeat: no-repeat;
     background-size: cover;
     color: $color-white;
@@ -16,9 +16,17 @@ main {
     padding: 0;
 
     .about, .header, .signup {
-        margin: 1.0em;
-        max-width: 768px;
-        width: 100%;
+        max-width: 512px;
+        padding: 1.0em;
+    }
+
+    .header {
+        text-align: center;
+
+        svg {
+            max-width: 320px;
+            width: 100%;
+        }
     }
 
     .signupform {
@@ -27,6 +35,7 @@ main {
         input[type="email"] {
             background: $color-gray-90;
             border: none;
+            border-radius: 0;
             border-bottom-left-radius: 3px;
             border-top-left-radius: 3px;
             flex: 1;
@@ -41,6 +50,7 @@ main {
         .button {
             background: $color-primary-80;
             border: none;
+            border-radius: none;
             border-top-right-radius: 3px;
             border-bottom-right-radius: 3px;
             cursor: pointer;
