--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -50,7 +50,7 @@ main {
         .button {
             background: $color-primary-80;
             border: none;
-            border-radius: none;
+            border-radius: 0;
             border-top-right-radius: 3px;
             border-bottom-right-radius: 3px;
             cursor: pointer;
