--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,9 @@
-<!-- put Google Analytics code here -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117938225-3"></script>
 <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-117938225-3');
 </script>
