Convert to www.shredahead.app

--- a/_sass/defaults/_colors.scss
+++ b/_sass/defaults/_colors.scss
@@ -28,7 +28,7 @@ $color-bright: lighten($color-txt-light, 13%);
 $color-dark: #2A303D;
 $color-dark-dark: darken(#2A303D, 9%);
 
-$color-primary: #B85949;
+$color-primary: #A4332F;
 $color-primary-20: darken($color-primary, 7%);
-$color-primary-80: #DBA350;
+$color-primary-80: #DFA35F;
 
